# luajit-perf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh  not-jitted  out.unfold  parse.sh  run.sh  setup.sh
benchmarks/: CMakeLists.txt  mixed-recursion.lua
benchmarks/mixed-recursion/: CMakeLists.txt  c_payload.c  lua_payload.lua
flamegraphs/: test
include/benchmark/: benchmark.h
perf-benchmark/: .gitignore  CMakeLists.txt  README.md  out.nofold
perf-benchmark/src/: CMakeLists.txt  payload.c  run_embedded.c
perf-benchmark/src/lua/: config.lua  embedded_script.lua  lua_payload.lua  run_payloads.lua
scripts/: README.md  export-luajit  fold.py  lj-env  make-flamegraph  record-profile  run  run_infinitely
src/: CMakeLists.txt  embed.c  embed.h  main.c
src/benchmark/: CMakeLists.txt  benchmark.c  run_benchmark.c  run_payloads.lua  run_payloads_.lua
src/profiler/: CMakeLists.txt  buffer.c  buffer.h  callchain.c  callchain.h  profile.c  profile.h  profile_benchmark.c  write.c  write.h
src/trigger/: CMakeLists.txt  trigger.c
